force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/ucinn_ascendv2__Physician_Assignment_v1__c.object-meta.xml
<CustomObject>
    <description>Physicians at the school who have made patient referrals.</description>
    <label>Physician Assignment</label>
    <nameField>
        <label>Physician Assignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physician Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>