force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/fields/ucinn_ascendv2__Cancer_Physician_CMM_Description_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Cancer_Physician_CMM_Description_Formula__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Cancer_Center_Physician_CMM_Description__c</formula>
    <label>Cancer Physician CMM Description</label>
    <type>Text</type>
</CustomField>