force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/fields/ucinn_ascendv2__Comments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>