force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Physician Assignments</relationshipLabel>
    <relationshipName>Physician_Assignments_v1_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>