force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/fields/ucinn_ascendv2__Hospital_Physician_CMM_Desc_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Physician_CMM_Desc_Formula__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Hospital_Physician_CMM_Group_Description__c</formula>
    <label>Hospital Physician CMM Desc</label>
    <type>Text</type>
</CustomField>