force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/fields/ucinn_ascendv2__Is_Active_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Active_Formula__c</fullName>
    <formula>IF(AND(ucinn_ascendv2__Start_Date__c &lt;= TODAY(), ucinn_ascendv2__End_Date__c &gt;= TODAY()), TRUE,
   IF(AND(ISBLANK(ucinn_ascendv2__Start_Date__c), ucinn_ascendv2__End_Date__c &gt;= TODAY()), TRUE,
      IF(AND(ucinn_ascendv2__Start_Date__c &lt;= TODAY(), ISBLANK(ucinn_ascendv2__End_Date__c)), TRUE,
         IF(AND(ISBLANK(ucinn_ascendv2__Start_Date__c), ISBLANK(ucinn_ascendv2__End_Date__c)), TRUE,
   FALSE))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>