force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/fields/ucinn_ascendv2__Physician_Assignment_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician_Assignment_Name_Auto_Number__c</fullName>
    <displayFormat>PA-{0000000}</displayFormat>
    <label>Physician Assignment Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>