force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/fields/ucinn_ascendv2__Physician_Division_Section_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician_Division_Section_Formula__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Physician_Division_Section__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Division/Section</label>
    <type>Text</type>
</CustomField>