force-app/main/default/objects/ucinn_ascendv2__Physician_Assignment_v1__c/fields/ucinn_ascendv2__Physician_Level_of_Engagement_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician_Level_of_Engagement_Formula__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Physician_Level_of_Engagement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Level of Engagement</label>
    <type>Text</type>
</CustomField>